--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="../pluginBase.js"></script>
+	<script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.js"></script>
     <script src="clipart.js"></script>
     <style>
         #search-id{
@@ -144,7 +144,7 @@
 		}
 
     </style>
-    <link rel="stylesheet" href="../plugins.css">
+    <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
 </head>
 <body style="width: 100%;height: 100%; margin: 0;">
     <div id="main-container-id" >
