--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 	<script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.js"></script>
-    <script src="clipart.js"></script>
+    <script src="./scripts/clipart.js"></script>
     <style>
         #search-id{
             border: none;
