--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <script src="./vendor/jQuery-2.2.2-min/jquery-v2.2.2-min.js"></script>
 	<script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.js"></script>
+	<script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins-ui.js"></script>
     <script src="./scripts/clipart.js"></script>
     <style>
         #search-id{
@@ -159,7 +160,7 @@
                             </td>
                             <td id="button-cell-id">
                                 <button type="submit" id="search-button-id" class="noselect">
-                                    <img id="search-button-image-id" src="search.png" srcset="search@2x.png 2x"  alt="submit" style="vertical-align: middle"/>
+                                    <img id="search-button-image-id" src="resources/img/search.png" srcset="resources/img/search@2x.png 2x"  alt="submit" style="vertical-align: middle"/>
                                 </button>
                             </td>
                         </tr>
