--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+	<link rel="stylesheet" href="plugin_style.css">
     <script src="./vendor/jQuery-2.2.2-min/jquery-v2.2.2-min.js"></script>
 	<script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.js"></script>
 	<script type="text/javascript" src="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins-ui.js"></script>
@@ -148,6 +149,9 @@
     <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
 </head>
 <body style="width: 100%;height: 100%; margin: 0;">
+	<div id="loader" class="cssload-container display-none">
+		<div class="cssload-loading"><i></i><i></i><i></i><i></i></div>
+	</div>
     <div id="main-container-id" >
         <div id="main-search-container-id" style="height: 50px">
             <form onsubmit="return false" id="search-form-id">
