--- a/index.html
+++ b/index.html
@@ -149,9 +149,14 @@
     <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
 </head>
 <body style="width: 100%;height: 100%; margin: 0;">
-	<div id="loader" class="cssload-container display-none">
-		<div class="cssload-loading"><i></i><i></i><i></i><i></i></div>
-	</div>
+	<div id="loader-container" class="asc-plugin-loader">
+        <div class="asc-loader-image">
+            <div class="asc-loader-title"></div>
+        </div>
+        <div class="asc-loader-title">
+            Loading...
+        </div>
+    </div>
     <div id="main-container-id" >
         <div id="main-search-container-id" style="height: 50px">
             <form onsubmit="return false" id="search-form-id">
