--- a/index.html
+++ b/index.html
@@ -94,12 +94,10 @@
             background-color: rgb(244, 244, 244);
         }
 
-
-
         .pagination-button-div{
             display: table-cell;
             font-size: 11px;
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-family: "Arial";
             height: 22px;
             cursor: pointer;
             vertical-align: middle;
@@ -144,17 +142,33 @@
 		  height: 20px;
 		  width: 20px;
 		}
+		#flex-loader-container {
+		    display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 150px;
+            height: 50px;
+            border: none;
+            background-image: none;
+            background-color: rgba(68, 68, 68, 0.95);
+            color: #f1f1f1;
+            border-radius: 6px;
+		}
 
     </style>
     <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
 </head>
 <body style="width: 100%;height: 100%; margin: 0;">
 	<div id="loader-container" class="asc-plugin-loader">
-        <div class="asc-loader-image">
-            <div class="asc-loader-title"></div>
-        </div>
-        <div class="asc-loader-title">
-            Loading...
+        <div id="flex-loader-container">
+            <div>
+                <div class="asc-loader-image">
+                    <div class="asc-loader-title"></div>
+                </div>
+                <div class="asc-loader-title">
+                    Loading...
+                </div>
+            </div>
         </div>
     </div>
     <div id="main-container-id" >
