--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
         	width: 100%;
         	margin-top: 16px;
         }
+        .no-results {
+		    font-size: 13px;
+		    margin-left: 7px;
+		}
 
     </style>
     <link rel="stylesheet" href="https://onlyoffice.github.io/sdkjs-plugins/v1/plugins.css">
@@ -167,7 +171,7 @@
             <button onсlick="" id="button-search-id" class="btn-text-default">Search</button>
             <div class="separator horizontal" style="width: 100%; margin-top: 16px;"></div>
         </div>
-        <div id="scrollable-container-id" style="position: relative; height: calc(100% - 100px); overflow: hidden">
+        <div id="scrollable-container-id" style="position: relative; height: calc(100% - 100px); overflow: hidden; min-height: 200px;">
             <div id="preview-images-container-id" style="display: block; position: absolute; margin-top: 10px;">
             </div>
         </div>
